--- a/Minha Página/css/style.css
+++ b/Minha Página/css/style.css
@@ -5,29 +5,24 @@
 
 body {
     background: #E8C5C5;
-    margin: 10%;
+    margin: 0 15%;
     text-align: justify;
 }
 
-/* MENU e LOGO */
-
+/* Menu */
 nav p{
-   border:1px solid red;
    font-size: 65px;
    text-align: center;
+   padding: 5px;
+   font-family: fantasy;
+   color: #333232;
 }
-
-
 
 #menu ul{
-    border :1px solid yellow;
-}
-#menu ul {
-    padding:0px;
-    margin:0px;
+    padding: 0;
+    margin: 0;
     float: left;
     width: 100%;
-    height: 50px;
     background-color:#EDEDED;
     list-style:none;
 }
@@ -38,45 +33,85 @@ nav p{
 
 #menu ul li a {
     background-color:#EDEDED;
-    color: #333;
+    color: #000000;
     text-decoration: none;
-    border-bottom:3px solid #EDEDED;
-    padding: 2px 10px;
+    padding: 5px;
     float:left;
+    margin-left: 10%;
+    
 }
 
 #menu ul li a:hover {
     background-color:#D6D6D6;
     color: #6D6D6D;
-    border-bottom:3px solid #E8C5C5;
+}
 
+/*Apresentação*/
+header{
+    padding-top: 55px;
+    padding-bottom: 25px;  
+}
+
+/*Conteúdo*/
 section{
     width: 100%;
     height: 100%;
 }
 
-h1 {
-    color: red;
-    font-family: fantasy;
+h2{
+    text-align: center;
+    margin-bottom: 15px;
+    text-decoration: underline;
+    font-size: 28px;
+    color: #545454;
 }
 
-h2 {
-    font-family: fantasy;
+p{
+    font-size: 17px;
 }
 
-p {
-    font-size: 18px;
+/*Boxes de Imagens*/
+img{
+    border: 2px solid #EDEDED;
 }
 
+.boxImg{
+    margin-left: 8%;
+    margin-top: 35px;
+    margin-bottom: 35px;
+}
+
+.boxParceiro{
+    margin-left: 12%;
+    margin-top: 35px;
+    margin-bottom: 35px;
+}
+
+/*Contato*/
+.logoContato{
+    width:50px;
+}
+
+#contato{
+    text-align: center;
+}
+
+.boxContato a{
+    text-decoration: none;
+}
+
+.boxContato a img{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+/*Rodapé*/
 footer {
-    margin-bottom: 30px;
-}
-
-.img_padrao {
-    margin-bottom: 20px;
-    width: 300px;
-}
-
-.logo {
-    width: 30px;
+   margin-top: 25px;
+   font-size: 12px;
+   text-align: center;
+   background-color:#EDEDED;
+   height: 15px;
+   padding: 10px;
+   color: #6D6D6D;
 }
